install/0000_50_cluster-update-console-plugin_20_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-cluster-update-console-plugin
  annotations:
    kubernetes.io/description: This NetworkPolicy is used to deny all ingress and egress traffic by default in this namespace, matching all Pods, and serving as a baseline.
    capability.openshift.io/name: Console
    release.openshift.io/feature-set: TechPreviewNoUpgrade
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
